# bazel_grpc_precompiled

./: BUILD  MODULE.bazel  README.md  python_rules.bzl
